@@ -15,9 +15,9 @@ Author: Olivier Tilloy <olivier.tilloy@canonical.com>
 --- a/gfx/qcms/src/transform.rs
 +++ b/gfx/qcms/src/transform.rs
 @@ -21,7 +21,7 @@
- // OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
  // WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  
+ #![allow(clippy::missing_safety_doc)]
 -#[cfg(all(any(target_arch = "arm", target_arch = "aarch64"), feature = "neon"))]
 +#[cfg(all(any(target_arch = "aarch64"), feature = "neon"))]
  use crate::transform_neon::{
